의존성 추가

--- a/my-portal-project/backend/pom.xml
+++ b/my-portal-project/backend/pom.xml
@@ -92,16 +92,16 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency></dependency>
-		
-		
+		<!-- ✅ JWT 인증 구현에 필요한 JJWT 라이브러리들 -->
+
+		<!-- JJWT의 기본 API (Token 생성, 파싱 등 핵심 기능을 제공) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.5</version>
 		</dependency>
 
-		<!-- JJWT 라이브러리: JSON Web Token API -->
+		<!-- JWT 서명 검증 및 파싱 구현체 (기본 API만으로는 작동하지 않으므로 runtime에 필요) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
@@ -109,11 +109,10 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- JJWT 라이브러리: JSON Web Token 생성 및 검증 -->
-		<!-- Jackson, Gson 또는 org.json을 사용하여 JSON 직렬화/역직렬화 -->
+		<!-- JWT Payload에서 JSON 변환을 위해 Jackson 사용 (Gson이나 org.json으로도 교체 가능) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson, jjwt-orgjson -->
+			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
