--- a/my-portal-project/backend/src/main/resources/application.yml
+++ b/my-portal-project/backend/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
   datasource:
-    # profile에 따라 Oracle/SQLite 설정 분기
     url: jdbc:sqlite:sample.db
     driver-class-name: org.sqlite.JDBC
 
+  jpa:
+    hibernate:
+      ddl-auto: update         # ✅ 테이블 자동 생성/수정
+    show-sql: true             # ✅ 콘솔에 SQL 출력
+    properties:
+      hibernate:
+        format_sql: true       # ✅ SQL 보기 좋게 정렬
+
 jwt:
   secret: my-super-secure-secret-key-1234567890abcdef
-
