--- a/my-portal-project/backend/src/main/resources/application.yml
+++ b/my-portal-project/backend/src/main/resources/application.yml
@@ -1,12 +1,16 @@
 server:
   port: 8081
+  servlet:
+    context-path: /api
 
 spring:
   profiles:
     active: sqlite  # 👈 이 줄을 명시해야 application-sqlite.yml 이 사용됨
   datasource:
-    url: jdbc:sqlite:sample.db
-    driver-class-name: org.sqlite.JDBC
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
@@ -15,6 +19,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   security:
     oauth2:
       client:
@@ -22,39 +30,70 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            redirect-uri: ${OAUTH2_REDIRECT_URI}
             scope:
               - email
               - profile
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
+            redirect-uri: ${OAUTH2_REDIRECT_URI}
             scope:
-              - name
               - email
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+              - profile
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: ${OAUTH2_REDIRECT_URI}
             scope:
               - profile_nickname
               - account_email
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 jwt:
-  secret: "testSecretKey1234567890123456789012345678901234567890"
-  expiration: 86400000  # 24시간
+  secret: ${JWT_SECRET:your-secret-key}
+  access-token-validity-in-seconds: 3600
+  refresh-token-validity-in-seconds: 86400
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    com.example.portal: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+app:
+  jwt:
+    secret: ${JWT_SECRET:your-secret-key}
+    access-token-validity-in-seconds: 3600
+    refresh-token-validity-in-seconds: 604800
+  oauth2:
+    redirect-uri: ${OAUTH2_REDIRECT_URI:http://localhost:3000/oauth2/redirect}
+  file:
+    upload-dir: ./uploads
+    base-url: ${FILE_BASE_URL:http://localhost:8080/files}
+
+# Swagger 설정
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+    tryItOutEnabled: true
+    filter: true
+  packages-to-scan: com.example.portal.controller
+  paths-to-match: /api/**
