에러 수정, dto 처리

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
       "editor.defaultFormatter": "redhat.java",
       "editor.formatOnSave": true
     },
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "files.autoSave": "onFocusChange"
 }
 
   
