--- a/my-portal-project/backend/src/main/resources/application-test.yml
+++ b/my-portal-project/backend/src/main/resources/application-test.yml
@@ -11,6 +11,10 @@ spring:
       hibernate:
         format_sql: true
 
-jwt:
-  secret: "testSecretKey1234567890123456789012345678901234567890"
-  expiration: 86400000  # 24시간 
+app:
+  jwt:
+    secret: "testSecretKey1234567890123456789012345678901234567890"
+    access-token-validity-in-seconds: 3600
+    refresh-token-validity-in-seconds: 604800
+  oauth2:
+    redirect-uri: "http://localhost:8080/oauth2/callback" 
