--- a/my-portal-project/backend/src/main/resources/application-oauth.yml
+++ b/my-portal-project/backend/src/main/resources/application-oauth.yml
@@ -6,6 +6,7 @@ spring:
           google:
             client-id: 687098864824-1tbt0lbp8e9bhc83blu1525mmkksvbcp.apps.googleusercontent.com
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
             scope:
               - email
               - profile
@@ -21,7 +22,7 @@ spring:
               - account_email
           naver:
             client-id: 69i2oXfZ4aEeSwHGnabl
-            client-secret: QvExBfS7tv
+            client-secret: ${NAVER_CLIENT_SECRET}
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
             client-name: Naver
@@ -29,4 +30,14 @@ spring:
             scope:
               - name
               - email
-              - profile_image 
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response 
