--- a/my-portal-project/backend/src/main/resources/application.yml
+++ b/my-portal-project/backend/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             redirect-uri: ${OAUTH2_REDIRECT_URI}
+            authorization-grant-type: authorization_code
             scope:
               - email
               - profile
@@ -38,6 +39,7 @@ spring:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
             redirect-uri: ${OAUTH2_REDIRECT_URI}
+            authorization-grant-type: authorization_code
             scope:
               - email
               - profile
@@ -45,6 +47,7 @@ spring:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
             redirect-uri: ${OAUTH2_REDIRECT_URI}
+            authorization-grant-type: authorization_code
             scope:
               - profile_nickname
               - account_email
